tests/syntax_errors/test84_2.tl
require "ifj21"
_34
